--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
   },
   "type": "module",
   "keywords": [],
@@ -22,4 +23,5 @@
     "mongoose": "^8.5.4",
     "nodemon": "^3.1.4"
   }
+
 }
