--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
+    "version": 2,
     "builds": [
-      {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
-      }
+      { "src": "./index.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1.js" }
+      { "src": "/(.*)", "dest": "/" }
     ]
   }
   
